[package]
name = "simple_bpe"
version = "0.1.0"
edition = "2021"
authors = ["Eva Koroleva <elizaveta.victoria.koroleva@gmail.com>"]
description = "Minimal rust implementation of BPE (Byte Pair Encoding) algorithm"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
itertools = "0.12"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "simple_bpe"
path = "src/lib.rs"

[[bin]]
name = "simple_bpe"
path = "src/main.rs"